# code-kata

./: .luarc.json  .tasks  README.md
bash/FizzBuzz/: FizzBuzz.sh  TestFizzBuzz.sh
bash/StringCalculator/: StringCalculator.sh  TestStringCalculator.sh
c/FizzBuzz/: CMakeLists.txt  fizzbuzz.c  fizzbuzz.h  fizzbuzz_test.c
c/StringCalculator/: CMakeLists.txt  StringCalculator.c  StringCalculator.h  StringCalculatorTest.c  test.sh
csharp/: csharp.sln
csharp/FizzBuzz/FizzBuzz/: FizzBuzz.cs
csharp/FizzBuzz/FizzBuzz.Tests/: FizzBuzz.Tests.csproj  TestFizzBuzz.cs
csharp/StringCalculator/: StringCalculator.sln
csharp/StringCalculator/StringCalculator_Library/: Class1.cs  StringCalculator.cs
csharp/StringCalculator/StringCalculator_Test/: StringCalculator_Test.csproj  StringCalculator_Tests.cs  UnitTest1.cs
kata-instructions/: FizzBuzz.md  StringCalculator.md
lua/FizzBuzz/: FizzBuzz.lua  TestFizzBuzz.lua
lua/full/FizzBuzz/: TestFizzBuzz.lua
lua/full/StringCalculator/: StringCalculator.lua  TestStringCalculator.lua
lua_neovim_and_normal/neovim_plugin_luajit/ceaser-cipher.nvim/lua/ceaser-cipher/: ceaser-cipher-function.lua  init.lua
lua_neovim_and_normal/neovim_plugin_luajit/ceaser-cipher.nvim/lua/tests/ceaser-cipher/: ceaser-cipher_spec.lua
lua_neovim_and_normal/neovim_plugin_luajit/string-calculator.nvim/lua/string-calculator/: init.lua  string-calculator-function.lua
lua_neovim_and_normal/neovim_plugin_luajit/string-calculator.nvim/lua/tests/string-calculator/: string-calculator_spec.lua
lua_neovim_and_normal/normal/FizzBuzz/: FizzBuzz.lua
powershell/StringCalculator/: StringCalculator.ps1  StringCalculatorTests.ps1
